updating contact settings

--- a/contactsuccess.html
+++ b/contactsuccess.html
@@ -14,5 +14,5 @@
 </head>
 <body>
     <h1>Thankyou For you Message. You will here from me soon.</h1>
-    <p>Please click <a href="home.html">here</a> to go back to my home page.</p>
+    <p>Please click <a href="index.html">here</a> to go back to my home page.</p>
 </body>
