--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </li>
         
                     <li class="nav-item">
-                    <a class="nav-link" href="contactsuccess.html">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -140,7 +140,7 @@
             <!-- return urls can be fully qualified -OR-
               start with / for root relative -OR-
               start with . for url relative --> 
-          <input type="hidden" name="success_url" value="https://www.google.com" />
+          <input type="hidden" name="success_url" value="https://sufi1996.github.io/my-cv/contactsuccess.html" />
           <input type="hidden" name="error_url" value="https://www.google.com" />
         
 
