--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="about-me">
             <p id="timeline-link"><em>"</em>The First time I coded was for an Embedded system project in the final year of my Diploma
               in Engineering. It was an assembly language programming of 8051 Microcontroller. That was the project where I started to
-              have interest in coding. Thanks to Prof.  Najib Ghatte for teaching me brilliantly the assembly language and 8051 C programming.
+              have interest in coding. Thanks to <strong>Prof.  Najib Ghatte</strong> for teaching me brilliantly the assembly language and 8051 C programming.
               After I graduated I learned some basics of Java, HTML and CSS from freely available online resource like JavaTpoint.com and W3School,
               which helped me to land my first job in Tata Consultancy Services.
               <em>"</em>
