--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <!-- return urls can be fully qualified -OR-
               start with / for root relative -OR-
               start with . for url relative --> 
-          <input type="hidden" name="success_url" value="https://sufi1996.github.io/my-cv/contactsuccess.html" />
+          <input type="hidden" name="success_url" value="https://msufiyan09.github.io/my-cv/contactsuccess.html" />
           <input type="hidden" name="error_url" value="https://www.google.com" />
         
 
