--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="hero-section">
       <div class="header-container">
-        <div></div>
+        <div><img class="my-logo" src="images/my_logo.png" alt=""></div>
         <nav class="my-nav">
           <ul>
               <li>
@@ -35,19 +35,17 @@
       </div>
 
       <div id="mob-nav-id" class="mob-nav">
-        <ul>
-          <li>
+          <p>
             <a href="#describe">About</a>
-          </li>
+          </p>
 
-          <li>
+          <p>
             <a href="#timeline">Timeline</a>
-          </li>
+          </p>
 
-          <li>
+          <p>
             <a href="#contact">Contact</a>
-          </li>
-        </ul>
+          </p>
       </div>
 
        <!-- <img class = "top-cloud" src="cloud.png" alt="cloud image">-->
@@ -162,7 +160,7 @@
             <!-- return urls can be fully qualified -OR-
               start with / for root relative -OR-
               start with . for url relative --> 
-          <input type="hidden" name="success_url" value="https://msufiyan09.github.io/my-cv/contactsuccess.html" />
+          <input type="hidden" name="success_url" value="https://sufi1996.github.io/my-cv/contactsuccess.html" />
           <input type="hidden" name="error_url" value="https://www.google.com" />
         
 
